revised Q12 and updated Q13

--- a/CountryClubCaseStudy/Part 2 SQLite.ipynb
+++ b/CountryClubCaseStudy/Part 2 SQLite.ipynb
@@ -2,21 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "clear-deviation",
+   "execution_count": 1,
+   "id": "needed-friday",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -24,8 +15,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "compliant-overall",
+   "execution_count": 2,
+   "id": "invisible-factory",
    "metadata": {
     "scrolled": true
    },
@@ -36,8 +27,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "worthy-afghanistan",
+   "execution_count": 3,
+   "id": "tutorial-jacob",
    "metadata": {
     "scrolled": false
    },
@@ -68,8 +59,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "flexible-palestinian",
+   "execution_count": 4,
+   "id": "ordinary-mission",
    "metadata": {},
    "outputs": [
     {
@@ -106,8 +97,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "swedish-delta",
+   "execution_count": 5,
+   "id": "equal-majority",
    "metadata": {},
    "outputs": [
     {
@@ -165,77 +156,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "certain-ballet",
+   "execution_count": 8,
+   "id": "existing-cliff",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                          0  1\n",
-      "0            Anna Mackenzie  6\n",
-      "1                Anne Baker  8\n",
-      "2              Burton Tracy  8\n",
-      "3              Charles Owen  9\n",
-      "4              Darren Smith  7\n",
-      "5             David Farrell  5\n",
-      "6               David Jones  9\n",
-      "7              David Pinker  7\n",
-      "8             Douglas Jones  4\n",
-      "9             Erica Crumpet  4\n",
-      "10           Florence Bader  8\n",
-      "11           Gerald Butters  9\n",
-      "12         Henrietta Rumney  4\n",
-      "13  Henry Worthington-Smyth  4\n",
-      "14      Hyacinth Tupperware  5\n",
-      "15               Jack Smith  9\n",
-      "16          Janice Joplette  8\n",
-      "17           Jemima Farrell  8\n",
-      "18              Joan Coplin  7\n",
-      "19                John Hunt  6\n",
-      "20          Matthew Genting  6\n",
-      "21        Millicent Purview  6\n",
-      "22               Nancy Dare  8\n",
-      "23          Ponder Stibbons  8\n",
-      "24         Ramnaresh Sarwin  9\n",
-      "25               Tim Boothe  8\n",
-      "26               Tim Rownam  7\n",
-      "27            Timothy Baker  7\n",
-      "28              Tracy Smith  8\n"
+      "                    0                1    2\n",
+      "0      Anna Mackenzie  Badminton Court   30\n",
+      "1          Anne Baker  Badminton Court   10\n",
+      "2        Burton Tracy  Badminton Court    2\n",
+      "3        Charles Owen  Badminton Court    6\n",
+      "4        Darren Smith  Badminton Court  132\n",
+      "..                ...              ...  ...\n",
+      "197  Ramnaresh Sarwin   Tennis Court 2   11\n",
+      "198        Tim Boothe   Tennis Court 2   52\n",
+      "199        Tim Rownam   Tennis Court 2    6\n",
+      "200     Timothy Baker   Tennis Court 2    7\n",
+      "201       Tracy Smith   Tennis Court 2    2\n",
+      "\n",
+      "[202 rows x 3 columns]\n"
      ]
     }
    ],
    "source": [
     "# Q12: Find the facilities with their usage by member, but not guests\n",
-    "\n",
-    "query12 = '''SELECT member, SUM(used) AS facilities_used\n",
-    "             FROM(SELECT DISTINCT m.memid, \n",
-    "                        firstname || ' ' || surname as member, name as facility,\n",
-    "                        CASE WHEN b.memid = 0 THEN 0\n",
-    "                        ELSE 1 END as used\n",
-    "                  FROM Facilities AS f\n",
-    "                  LEFT JOIN Bookings AS b\n",
-    "                  ON f.facid = b.facid\n",
-    "                  LEFT JOIN Members AS m\n",
-    "                  ON b.memid = m.memid) facility_usage\n",
-    "            WHERE member != 'GUEST GUEST'\n",
-    "            GROUP BY member;'''\n",
-    "\n",
-    "call_query(conn, query12)"
+    "#question unclear...is this asking total number of uses of each facility by member?\n",
+    "#or is this asking how many facilities are used by each member?\n",
+    "#query12 = '''SELECT member, SUM(used) AS facilities_used\n",
+    "#             FROM(SELECT DISTINCT m.memid, \n",
+    "#                        firstname || ' ' || surname as member, name as facility,\n",
+    "#                        CASE WHEN b.memid = 0 THEN 0\n",
+    "#                        ELSE 1 END as used\n",
+    "#                  FROM Facilities AS f\n",
+    "#                  LEFT JOIN Bookings AS b\n",
+    "#                  ON f.facid = b.facid\n",
+    "#                  LEFT JOIN Members AS m\n",
+    "#                  ON b.memid = m.memid) facility_usage\n",
+    "#            WHERE member != 'GUEST GUEST'\n",
+    "#            GROUP BY member;'''\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "waiting-vampire",
+   "id": "considered-nicholas",
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "interesting-percentage",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     0                1    2\n",
+      "0   07  Badminton Court   51\n",
+      "1   07   Massage Room 1   77\n",
+      "2   07   Massage Room 2    4\n",
+      "3   07       Pool Table  103\n",
+      "4   07    Snooker Table   68\n",
+      "5   07     Squash Court   23\n",
+      "6   07     Table Tennis   48\n",
+      "7   07   Tennis Court 1   65\n",
+      "8   07   Tennis Court 2   41\n",
+      "9   08  Badminton Court  132\n",
+      "10  08   Massage Room 1  153\n",
+      "11  08   Massage Room 2    9\n",
+      "12  08       Pool Table  272\n",
+      "13  08    Snooker Table  154\n",
+      "14  08     Squash Court   85\n",
+      "15  08     Table Tennis  143\n",
+      "16  08   Tennis Court 1  111\n",
+      "17  08   Tennis Court 2  109\n",
+      "18  09  Badminton Court  161\n",
+      "19  09   Massage Room 1  191\n",
+      "20  09   Massage Room 2   14\n",
+      "21  09       Pool Table  408\n",
+      "22  09    Snooker Table  199\n",
+      "23  09     Squash Court   87\n",
+      "24  09     Table Tennis  194\n",
+      "25  09   Tennis Court 1  132\n",
+      "26  09   Tennis Court 2  126\n"
+     ]
+    }
+   ],
    "source": [
     "# Q13: Find the facilities usage by month, but not guests\n",
     "\n",
-    "query13 = '''\n",
-    "'''\n",
+    "query13 = '''SELECT month, facility, SUM(used) AS total_usage\n",
+    "             FROM (SELECT strftime('%m', starttime) as month, name as facility, \n",
+    "                   CASE WHEN b.memid = 0 THEN 0\n",
+    "                   ELSE 1 END as used\n",
+    "                   FROM Facilities AS f\n",
+    "                   LEFT JOIN Bookings AS b\n",
+    "                   ON f.facid = b.facid\n",
+    "                   LEFT JOIN Members AS m\n",
+    "                   ON b.memid = m.memid) AS facilities_used\n",
+    "            GROUP BY month, facility;'''\n",
     "\n",
     "call_query(conn, query13)"
    ]
