--- a/Frequentist Case Study/Frequentist Inference Case Study - Part B (2).ipynb
+++ b/Frequentist Case Study/Frequentist Inference Case Study - Part B (2).ipynb
@@ -299,7 +299,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__A:__ A one-sided interval is appropriate since the data is right-tailed"
+    "__A:__ A one-sided interval is appropriate. Per the 95% confidence interval below, the average charge is at least 13,815 and should not threaten the hospital's operational model."
    ]
   },
   {
@@ -311,12 +311,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.6459941145571317\n"
+      "-1.6459941145571324\n"
      ]
     }
    ],
    "source": [
-    "tcritical_value = t.ppf(0.95, df=medical.shape[0]-1)\n",
+    "#test if the actual average falls below 12,000\n",
+    "tcritical_value = t.ppf(0.05, df=medical.shape[0]-1)\n",
     "print(tcritical_value)"
    ]
   },
@@ -329,12 +330,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "19933.00722281906\n"
+      "-544.9350813250256\n"
      ]
     }
    ],
    "source": [
-    "margin_of_error = tcritical_value * sample_std\n",
+    "margin_of_error = tcritical_value * sample_std/np.sqrt(len(medical.charges))\n",
     "print(margin_of_error)"
    ]
   },
@@ -347,13 +348,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "33203.42948796031\n"
+      "13815.357346466282\n"
      ]
     }
    ],
    "source": [
-    "upper_95 = mean + margin_of_error\n",
-    "print(upper_95)"
+    "#the lowest average charge within a 95% confidence interval is at least 13,815\n",
+    "lower_95 = mean - margin_of_error\n",
+    "print(lower_95)"
    ]
   },
   {
