.ipynb checkpoint update

--- a/CountryClubCaseStudy/Part 2 SQLite.ipynb
+++ b/CountryClubCaseStudy/Part 2 SQLite.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "needed-friday",
+   "id": "lined-professor",
    "metadata": {
     "scrolled": true
    },
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "invisible-factory",
+   "id": "certain-graham",
    "metadata": {
     "scrolled": true
    },
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "tutorial-jacob",
+   "id": "acoustic-climb",
    "metadata": {
     "scrolled": false
    },
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ordinary-mission",
+   "id": "linear-license",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "equal-majority",
+   "id": "central-trance",
    "metadata": {},
    "outputs": [
     {
@@ -156,8 +156,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "existing-cliff",
+   "execution_count": 6,
+   "id": "patient-uzbekistan",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                          0  1\n",
+      "0            Anna Mackenzie  6\n",
+      "1                Anne Baker  8\n",
+      "2              Burton Tracy  8\n",
+      "3              Charles Owen  9\n",
+      "4              Darren Smith  7\n",
+      "5             David Farrell  5\n",
+      "6               David Jones  9\n",
+      "7              David Pinker  7\n",
+      "8             Douglas Jones  4\n",
+      "9             Erica Crumpet  4\n",
+      "10           Florence Bader  8\n",
+      "11           Gerald Butters  9\n",
+      "12         Henrietta Rumney  4\n",
+      "13  Henry Worthington-Smyth  4\n",
+      "14      Hyacinth Tupperware  5\n",
+      "15               Jack Smith  9\n",
+      "16          Janice Joplette  8\n",
+      "17           Jemima Farrell  8\n",
+      "18              Joan Coplin  7\n",
+      "19                John Hunt  6\n",
+      "20          Matthew Genting  6\n",
+      "21        Millicent Purview  6\n",
+      "22               Nancy Dare  8\n",
+      "23          Ponder Stibbons  8\n",
+      "24         Ramnaresh Sarwin  9\n",
+      "25               Tim Boothe  8\n",
+      "26               Tim Rownam  7\n",
+      "27            Timothy Baker  7\n",
+      "28              Tracy Smith  8\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Q12: Find the facilities with their usage by member, but not guests\n",
+    "#question unclear...is this asking total number of uses of each facility by member?\n",
+    "#or is this asking how many facilities are used by each member?\n",
+    "\n",
+    "#facilities used by each member\n",
+    "query12a = '''SELECT member, SUM(used) AS facilities_used\n",
+    "             FROM(SELECT DISTINCT m.memid, \n",
+    "                       firstname || ' ' || surname as member, name as facility,\n",
+    "                        CASE WHEN b.memid = 0 THEN 0\n",
+    "                        ELSE 1 END as used\n",
+    "                  FROM Facilities AS f\n",
+    "                  LEFT JOIN Bookings AS b\n",
+    "                  ON f.facid = b.facid\n",
+    "                  LEFT JOIN Members AS m\n",
+    "                  ON b.memid = m.memid) facility_usage\n",
+    "            WHERE member != 'GUEST GUEST'\n",
+    "            GROUP BY member;'''\n",
+    "\n",
+    "call_query(conn, query12a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "based-finger",
    "metadata": {},
    "outputs": [
     {
@@ -182,36 +247,27 @@
     }
    ],
    "source": [
-    "# Q12: Find the facilities with their usage by member, but not guests\n",
-    "#question unclear...is this asking total number of uses of each facility by member?\n",
-    "#or is this asking how many facilities are used by each member?\n",
-    "#query12 = '''SELECT member, SUM(used) AS facilities_used\n",
-    "#             FROM(SELECT DISTINCT m.memid, \n",
-    "#                        firstname || ' ' || surname as member, name as facility,\n",
-    "#                        CASE WHEN b.memid = 0 THEN 0\n",
-    "#                        ELSE 1 END as used\n",
-    "#                  FROM Facilities AS f\n",
-    "#                  LEFT JOIN Bookings AS b\n",
-    "#                  ON f.facid = b.facid\n",
-    "#                  LEFT JOIN Members AS m\n",
-    "#                  ON b.memid = m.memid) facility_usage\n",
-    "#            WHERE member != 'GUEST GUEST'\n",
-    "#            GROUP BY member;'''\n",
-    "\n"
+    "#total number of uses of each facility by member\n",
+    "query12b = '''SELECT member, facility, SUM(used) AS facilities_usage\n",
+    "             FROM(SELECT m.memid, firstname || ' ' || surname as member, \n",
+    "                        name as facility,\n",
+    "                        CASE WHEN b.memid = 0 THEN 0\n",
+    "                        ELSE 1 END as used\n",
+    "                  FROM Facilities AS f\n",
+    "                  LEFT JOIN Bookings AS b\n",
+    "                  ON f.facid = b.facid\n",
+    "                  LEFT JOIN Members AS m\n",
+    "                  ON b.memid = m.memid) facility_used\n",
+    "            WHERE member != 'GUEST GUEST'\n",
+    "            GROUP BY facility, member;'''\n",
+    "\n",
+    "call_query(conn, query12b)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "considered-nicholas",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "interesting-percentage",
+   "execution_count": 8,
+   "id": "champion-departure",
    "metadata": {},
    "outputs": [
     {
