--- a/Frequentist Case Study/Frequentist Inference Case Study - Part A (3).ipynb
+++ b/Frequentist Case Study/Frequentist Inference Case Study - Part A (3).ipynb
@@ -1526,7 +1526,7 @@
     }
    ],
    "source": [
-    "norm.cdf(1)"
+    "norm.cdf(1, loc=0, scale=1)"
    ]
   },
   {
@@ -1702,7 +1702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
