--- a/API/api_data_wrangling_mini_project.ipynb
+++ b/API/api_data_wrangling_mini_project.ipynb
@@ -359,9 +359,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "case studies",
    "language": "python",
-   "name": "python3"
+   "name": "sb_casestudies"
   },
   "language_info": {
    "codemirror_mode": {
